--- a/Frontend/src/app/app-customer/view/search-result/search-result.component.html
+++ b/Frontend/src/app/app-customer/view/search-result/search-result.component.html
@@ -6,332 +6,8 @@
     <i class="fi-cart"></i>
   </div>
 </button>
-<div class="offcanvas offcanvas-end" id="cart-viewer" style="width: 50rem;">
-  <div class="offcanvas-header d-block">
-    <div class="d-flex justify-content-between mb-2">
-      <div class="pe-3">
-        <div class="d-flex align-items-center mb-2">
-          <a class="btn btn-icon btn-primary btn-md shadow-sm rounded-circle me-2 mb-0" href="#">
-            <i class="fi-cart"></i></a>
-          <!-- <img class="rounded-circle me-1" src="../../../../assets/img/37.png" width="48" alt="Avatar"> -->
-          <div class="ps-2">
-            <h6 class="fs-base mb-0">OrderId</h6>
-            <div class="text-muted fw-normal fs-sm">Sent to 3 Shops</div>
-          </div>
-        </div>
-      </div>
 
-      <div>
-        <button class="btn-close" type="button" data-bs-dismiss="offcanvas"></button>
-      </div>
-    </div>
-    <div class="section-second mb-3">
-      <div class="list-group list-group-horizontal-sm">
-        <a href="#" class="list-group-item list-group-item-action text-center" data-bs-toggle="tooltip"
-           title="Items Count" data-bs-original-title="Items Count" aria-label="Items Count">
-          <div class="bg-teal rounded text-center p-2"><i class="fi-list d-block h5 text-light mb-0 mx-center"></i>
-            <span class="fs-xs h4 text-light">5</span>
-          </div>
-        </a>
-        <a href="#" class="list-group-item list-group-item-action text-center" data-bs-toggle="tooltip"
-           title="Total Price" data-bs-original-title="Total Price" aria-label="Total Price">
-          <div class="bg-teal rounded text-center p-2">
-            <i class="fi-cash d-block h5 text-light mb-0 mx-center"></i><span
-            class="fs-xs h4 text-light">LKR 2500</span>
-          </div>
-        </a>
-        <a href="#cart-item-list" data-bs-toggle="collapse" aria-expanded="false" aria-controls="cart-item-list"
-           class="list-group-item list-group-item-action text-center">
-          <div class="bg-teal rounded text-center p-2">
-            <i class="fi-eye-on d-block h5 text-light mb-0 mx-center"></i>
-            <span class="fs-xs h4 text-light">view</span>
-          </div>
-        </a>
-      </div>
-    </div>
-  </div>
-  <div class="offcanvas-body">
-    <div class="collapse mb-3" id="cart-item-list">
-      <div class="card card-body mb-2">
-        <!--order for shop-->
-        <blockquote class="">
-          <div class="d-flex justify-content-between mb-2">
-            <div class="pe-3">
-              <div class="d-flex align-items-center mb-2">
-                <img class="rounded-circle me-1" src="../../../../../assets/img/37.png" width="48" alt="Avatar">
-                <div class="ps-2">
-                  <h6 class="fs-base mb-0">Ralph Edwards</h6>
-                  <div class="text-muted fw-normal fs-sm">0765363828 | 0742213254</div>
-                </div>
-              </div>
-            </div>
-            <div>
-              <div class="text-muted fs-sm mt-1"><a
-                class="btn btn-icon btn-danger btn-sm shadow-sm rounded-circle me-2 mb-0" href="#"
-                data-bs-toggle="tooltip" title="Remove order." data-bs-original-title="Remove order."
-                aria-label="Remove order.">
-                <i class="fi-trash"></i></a></div>
-            </div>
-          </div>
-          <div class="section-second mb-3">
-            <div class="list-group list-group-horizontal-sm">
-              <a href="#" class="list-group-item list-group-item-action text-center" data-bs-toggle="tooltip"
-                 title="Items Count" data-bs-original-title="Items Count" aria-label="Items Count">
-                <div class="bg-darkslategrey rounded text-center p-2"><i
-                  class="fi-list d-block h5 text-light mb-0 mx-center"></i>
-                  <span class="fs-xs h4 text-light">5</span>
-                </div>
-              </a>
-              <a href="#" class="list-group-item list-group-item-action text-center" data-bs-toggle="tooltip"
-                 title="Total Price" data-bs-original-title="Total Price" aria-label="Total Price">
-                <div class="bg-darkslategrey rounded text-center p-2">
-                  <i class="fi-cash d-block h5 text-light mb-0 mx-center"></i><span
-                  class="fs-xs h4 text-light">LKR 2500</span>
-                </div>
-              </a>
-              <a href="#cart-item-list-2" data-bs-toggle="collapse" aria-expanded="false"
-                 aria-controls="cart-item-list-2" class="list-group-item list-group-item-action text-center">
-                <div class="bg-darkslategrey rounded text-center p-2">
-                  <i class="fi-eye-on d-block h5 text-light mb-0 mx-center"></i>
-                  <span class="fs-xs h4 text-light">view</span>
-                </div>
-              </a>
-            </div>
-          </div>
-          <div class="collapse mb-1" id="cart-item-list-2">
-            <div class="card card-body border-none">
-              <!--Order detail card 1-->
-              <div class="order-detail-card mb-3">
-                <div class="d-flex align-items-center justify-content-between pb-1">
-                  <div class="d-flex justify-content-between align-items-start">
-                    <button type="button" class="btn btn-outline-primary btn-icon btn-xxs" style="margin-top: 3px;">
-                      <i class="fi-x"></i>
-                    </button>
-                    <h3 class="h6 mb-2 fs-base">
-                      <a class="nav-link" href="#" data-bs-toggle="offcanvas" data-bs-target="#item-viewer">Item
-                        Name</a>
-                    </h3>
-                  </div>
-                  <span class="badge rounded-pill bg-info"> Item </span>
-                </div>
-                <div class="order-detail-card-ss mb-3">
-                  <div class="list-group list-group-horizontal-sm">
-                    <a href="#" class="list-group-item list-group-item-action text-center" data-bs-toggle="tooltip"
-                       title="Quantity" data-bs-original-title="Quantity" aria-label="Quantity">
-                      <div class="bg-dark rounded text-center p-2">
-                        <i class="fi-archive d-block h5 text-light mb-0 mx-center"></i>
-                        <span class="fs-xs h4 text-light">2</span>
-                      </div>
-                    </a>
-                    <a href="#" class="list-group-item list-group-item-action text-center" data-bs-toggle="tooltip"
-                       title="Discount" data-bs-original-title="Discount" aria-label="Discount">
-                      <div class="bg-dark rounded text-center p-2">
-                        <i class="fi-precentage d-block h5 text-light mb-0 mx-center"></i>
-                        <span class="fs-xs h4 text-light">LKR 20</span>
-                      </div>
-                    </a>
-                    <a href="#" class="list-group-item list-group-item-action text-center" data-bs-toggle="tooltip"
-                       title="Price" data-bs-original-title="Price" aria-label="Price">
-                      <div class="bg-dark rounded text-center p-2">
-                        <i class="fi-cash d-block h5 text-light mb-0 mx-center"></i>
-                        <span class="fs-xs h4 text-light">LKR 500</span>
-                      </div>
-                    </a>
-                  </div>
-                </div>
-
-              </div>
-              <!--Order detail card 2-->
-              <div class="order-detail-card mb-3">
-                <div class="d-flex align-items-center justify-content-between pb-1">
-                  <div class="d-flex justify-content-between align-items-start">
-                    <button type="button" class="btn btn-outline-primary btn-icon btn-xxs" style="margin-top: 3px;">
-                      <i class="fi-x"></i>
-                    </button>
-                    <h3 class="h6 mb-2 fs-base">
-                      <a class="nav-link" href="#" data-bs-toggle="offcanvas" data-bs-target="#package-viewer">Package
-                        Name</a>
-                    </h3>
-                  </div>
-                  <span class="badge rounded-pill bg-success"> Package </span>
-                </div>
-                <div class="order-detail-card-ss mb-3">
-                  <div class="list-group list-group-horizontal-sm">
-                    <a href="#" class="list-group-item list-group-item-action text-center" data-bs-toggle="tooltip"
-                       title="Quantity" data-bs-original-title="Quantity" aria-label="Quantity">
-                      <div class="bg-dark rounded text-center p-2">
-                        <i class="fi-archive d-block h5 text-light mb-0 mx-center"></i>
-                        <span class="fs-xs h4 text-light">1</span>
-                      </div>
-                    </a>
-                    <a href="#" class="list-group-item list-group-item-action text-center" data-bs-toggle="tooltip"
-                       title="Discount" data-bs-original-title="Discount" aria-label="Discount">
-                      <div class="bg-dark rounded text-center p-2">
-                        <i class="fi-precentage d-block h5 text-light mb-0 mx-center"></i><span
-                        class="fs-xs h4 text-light">LKR 250</span>
-                      </div>
-                    </a>
-                    <a href="#" class="list-group-item list-group-item-action text-center" data-bs-toggle="tooltip"
-                       title="Price" data-bs-original-title="Price" aria-label="Price">
-                      <div class="bg-dark rounded text-center p-2">
-                        <i class="fi-cash d-block h5 text-light mb-0 mx-center"></i>
-                        <span class="fs-xs h4 text-light">LKR 2000</span>
-                      </div>
-                    </a>
-                  </div>
-                </div>
-
-              </div>
-            </div>
-          </div>
-
-        </blockquote>
-      </div>
-      <div class="card card-body mb-2">
-        <!--order for shop-->
-        <blockquote class="">
-          <div class="d-flex justify-content-between mb-2">
-            <div class="pe-3">
-              <div class="d-flex align-items-center mb-2">
-                <img class="rounded-circle me-1" src="../../../../../assets/img/37.png" width="48" alt="Avatar">
-                <div class="ps-2">
-                  <h6 class="fs-base mb-0">Ralph Edwards</h6>
-                  <div class="text-muted fw-normal fs-sm">0765363828 | 0742213254</div>
-                </div>
-              </div>
-            </div>
-            <div>
-              <div class="text-muted fs-sm mt-1">
-                <a class="btn btn-icon btn-danger btn-sm shadow-sm rounded-circle me-2 mb-0" href="#"
-                   data-bs-toggle="tooltip" title="Remove order." data-bs-original-title="Remove order."
-                   aria-label="Remove order.">
-                  <i class="fi-trash"></i></a>
-              </div>
-            </div>
-          </div>
-          <div class="section-second mb-3">
-            <div class="list-group list-group-horizontal-sm">
-              <a href="#" class="list-group-item list-group-item-action text-center" data-bs-toggle="tooltip"
-                 title="Items Count" data-bs-original-title="Items Count" aria-label="Items Count">
-                <div class="bg-darkslategrey rounded text-center p-2"><i
-                  class="fi-list d-block h5 text-light mb-0 mx-center"></i>
-                  <span class="fs-xs h4 text-light">5</span>
-                </div>
-              </a>
-              <a href="#" class="list-group-item list-group-item-action text-center" data-bs-toggle="tooltip"
-                 title="Total Price" data-bs-original-title="Total Price" aria-label="Total Price">
-                <div class="bg-darkslategrey rounded text-center p-2">
-                  <i class="fi-cash d-block h5 text-light mb-0 mx-center"></i><span
-                  class="fs-xs h4 text-light">LKR 2500</span>
-                </div>
-              </a>
-              <a href="#card-item-list-3" data-bs-toggle="collapse" aria-expanded="false"
-                 aria-controls="card-item-list-3" class="list-group-item list-group-item-action text-center">
-                <div class="bg-darkslategrey rounded text-center p-2">
-                  <i class="fi-eye-on d-block h5 text-light mb-0 mx-center"></i>
-                  <span class="fs-xs h4 text-light">view</span>
-                </div>
-              </a>
-            </div>
-          </div>
-          <div class="collapse mb-1" id="card-item-list-3">
-            <div class="card card-body border-none">
-              <!--Order detail card 1-->
-              <div class="order-detail-card mb-3">
-                <div class="d-flex align-items-center justify-content-between pb-1">
-                  <div class="d-flex justify-content-between align-items-start">
-                    <button type="button" class="btn btn-outline-primary btn-icon btn-xxs" style="margin-top: 3px;">
-                      <i class="fi-x"></i>
-                    </button>
-                    <h3 class="h6 mb-2 fs-base">
-                      <a class="nav-link" href="#" data-bs-toggle="offcanvas" data-bs-target="#item-viewer">Item
-                        Name</a>
-                    </h3>
-                  </div>
-                  <span class="badge rounded-pill bg-info"> Item </span>
-                </div>
-                <div class="order-detail-card-ss mb-3">
-                  <div class="list-group list-group-horizontal-sm">
-                    <a href="#" class="list-group-item list-group-item-action text-center" data-bs-toggle="tooltip"
-                       title="Quantity" data-bs-original-title="Quantity" aria-label="Quantity">
-                      <div class="bg-dark rounded text-center p-2">
-                        <i class="fi-archive d-block h5 text-light mb-0 mx-center"></i>
-                        <span class="fs-xs h4 text-light">2</span>
-                      </div>
-                    </a>
-                    <a href="#" class="list-group-item list-group-item-action text-center" data-bs-toggle="tooltip"
-                       title="Discount" data-bs-original-title="Discount" aria-label="Discount">
-                      <div class="bg-dark rounded text-center p-2">
-                        <i class="fi-precentage d-block h5 text-light mb-0 mx-center"></i>
-                        <span class="fs-xs h4 text-light">LKR 20</span>
-                      </div>
-                    </a>
-                    <a href="#" class="list-group-item list-group-item-action text-center" data-bs-toggle="tooltip"
-                       title="Price" data-bs-original-title="Price" aria-label="Price">
-                      <div class="bg-dark rounded text-center p-2">
-                        <i class="fi-cash d-block h5 text-light mb-0 mx-center"></i>
-                        <span class="fs-xs h4 text-light">LKR 500</span>
-                      </div>
-                    </a>
-                  </div>
-                </div>
-
-              </div>
-              <!--Order detail card 2-->
-              <div class="order-detail-card mb-3">
-                <div class="d-flex align-items-center justify-content-between pb-1">
-                  <div class="d-flex justify-content-between align-items-start">
-                    <button type="button" class="btn btn-outline-primary btn-icon btn-xxs" style="margin-top: 3px;">
-                      <i class="fi-x"></i>
-                    </button>
-                    <h3 class="h6 mb-2 fs-base">
-                      <a class="nav-link" href="#" data-bs-toggle="offcanvas" data-bs-target="#package-viewer">Package
-                        Name</a>
-                    </h3>
-                  </div>
-                  <span class="badge rounded-pill bg-success"> Package </span>
-                </div>
-                <div class="order-detail-card-ss mb-3">
-                  <div class="list-group list-group-horizontal-sm">
-                    <a href="#" class="list-group-item list-group-item-action text-center" data-bs-toggle="tooltip"
-                       title="Quantity" data-bs-original-title="Quantity" aria-label="Quantity">
-                      <div class="bg-dark rounded text-center p-2">
-                        <i class="fi-archive d-block h5 text-light mb-0 mx-center"></i>
-                        <span class="fs-xs h4 text-light">1</span>
-                      </div>
-                    </a>
-                    <a href="#" class="list-group-item list-group-item-action text-center" data-bs-toggle="tooltip"
-                       title="Discount" data-bs-original-title="Discount" aria-label="Discount">
-                      <div class="bg-dark rounded text-center p-2">
-                        <i class="fi-precentage d-block h5 text-light mb-0 mx-center"></i><span
-                        class="fs-xs h4 text-light">LKR 250</span>
-                      </div>
-                    </a>
-                    <a href="#" class="list-group-item list-group-item-action text-center" data-bs-toggle="tooltip"
-                       title="Price" data-bs-original-title="Price" aria-label="Price">
-                      <div class="bg-dark rounded text-center p-2">
-                        <i class="fi-cash d-block h5 text-light mb-0 mx-center"></i>
-                        <span class="fs-xs h4 text-light">LKR 2000</span>
-                      </div>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </blockquote>
-      </div>
-    </div>
-  </div>
-  <div class="offcanvas-footer justify-content-end border-top">
-    <button class="btn btn-light-primary btn-sm">
-      <i class="fi-trash"></i> Clear Cart
-    </button>
-    <button class="btn btn-light-primary btn-sm">
-      <i class="fi-check-circle"></i> Place Order
-    </button>
-  </div>
-</div>
+<app-cart></app-cart>
 
 <main class="page-wrapper">
 
